# Agentic-AI_Repo_01

agentic-programs/: README.md
agentic-programs/01_uv/: README.md
agentic-programs/01_uv/01_project/explore-uv/: pyproject.toml
agentic-programs/01_uv/01_project/explore-uv/src/explore_uv/: hello.py
agentic-programs/01_uv/uv-project2/: pyproject.toml
agentic-programs/01_uv/uv-project2/src/uv_project2/: main.py
agentic-programs/02_openrouter/1-OpenRouter API directly calling/: main.py
agentic-programs/02_openrouter/2- Using OpenAI Agents SDK/: main.py  tools.py
