[project]
name = "uv-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Huma-Mohsin", email = "160951214+Huma-Mohsin@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
uv-project2 = "uv_project2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
